исправил пути к картинкам

--- a/cannabis.html
+++ b/cannabis.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cannabis</title>
-  <link rel="shortcut icon" href="http://na.cannabusimmunity.com/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/slick-theme.css">
@@ -21,7 +21,7 @@
   <div class="wrap">
     <header>
       <section class="container order">
-        <img class="order-product" src="http://na.cannabusimmunity.com/img/product.png">
+        <img class="order-product" src="img/product.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
             <div class="product-label">Cannabis Oil</div>
@@ -30,7 +30,7 @@
             <ul class="order-list animation-moveRight">
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-1.png">
+                  <img src="img/orderList-1.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">Защита от 9872</span> известных науке вирусов</p>
@@ -38,7 +38,7 @@
               </li>
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-2.png">
+                  <img src="img/orderList-2.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">Крепкое здоровье</span> во время эпидемии</p>
@@ -46,7 +46,7 @@
               </li>
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-3.png">
+                  <img src="img/orderList-3.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">защита</span> от повторных заражений</p>
@@ -114,7 +114,7 @@
     </header>
 
     <section class="danger">
-      <img class="danger-bg" src="http://na.cannabusimmunity.com/img/danger-bg.png">
+      <img class="danger-bg" src="img/danger-bg.png">
       <div class="container">
         <div class="row justify-content-center justify-content-lg-end">
           <div class="col-12 col-lg-7">
@@ -166,7 +166,7 @@
     <section class="immun">
       <div class="container">
         <div class="immun-productBlock">
-          <img class="immun-product" src="http://na.cannabusimmunity.com/img/product.png">
+          <img class="immun-product" src="img/product.png">
         </div>
         <div class="row justify-content-end">
           <div class="col-12 col-lg-7 immun-block">
@@ -225,7 +225,7 @@
         <div class="row justify-content-center justify-content-lg-start js-consist-anim animation-moveRight" style="opacity: 1;">
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item1.png">
+              <img src="img/consist-item1.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-1">
               <h2 class="consistItem-title">Полиненасыщенные жирные кислоты</h2>
@@ -249,7 +249,7 @@
         <div class="row justify-content-center justify-content-lg-end js-consist-anim animation-opacity" style="opacity: 1;">
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item3.png">
+              <img src="img/consist-item3.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-3">
               <h2 class="consistItem-title">Тиамин</h2>
@@ -259,7 +259,7 @@
           </div>
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item4.png">
+              <img src="img/consist-item4.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-4">
               <h2 class="consistItem-title">Рибофлавин</h2>
@@ -273,7 +273,7 @@
         <div class="row justify-content-center justify-content-lg-start js-consist-anim animation-moveLeft" style="opacity: 1;">
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item5.png">
+              <img src="img/consist-item5.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-5">
               <h2 class="consistItem-title">Каротин</h2>
@@ -284,7 +284,7 @@
           </div>
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item6.png">
+              <img src="img/consist-item6.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-6">
               <h2 class="consistItem-title">Хлорофилл</h2>
@@ -308,15 +308,15 @@
         </div>
         <div class="row justify-content-center how-itemsBlock">
           <div class="col-7 col-md-4 px-0 how-item">
-            <img class="how-img" src="http://na.cannabusimmunity.com/img/how-item-1.png">
+            <img class="how-img" src="img/how-item-1.png">
             <p class="how-text">По 1 капсуле <br>2-3 раза в день</p>
           </div>
           <div class="col-7 col-md-4 px-0 how-item how-item-2">
-            <img class="how-img" src="http://na.cannabusimmunity.com/img/how-item-2.png">
+            <img class="how-img" src="img/how-item-2.png">
             <p class="how-text">Принимать ежедневно <br> на протяжении всего курса</p>
           </div>
           <div class="col-7 col-md-4 px-0 how-item">
-            <img class="how-img" src="http://na.cannabusimmunity.com/img/how-item-3.png">
+            <img class="how-img" src="img/how-item-3.png">
             <p class="how-text">При ослабленном <br> иммунитете и частых простудах рекомендуется повторить курс</p>
           </div>
         </div>
@@ -431,7 +431,7 @@
             <ul class="order-list animation-moveRight" style="opacity: 1;">
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-1.png">
+                  <img src="img/orderList-1.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">Защита от 9872</span> известных науке вирусов</p>
@@ -439,7 +439,7 @@
               </li>
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-2.png">
+                  <img src="img/orderList-2.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">Крепкое здоровье</span> во время эпидемии</p>
@@ -447,7 +447,7 @@
               </li>
               <li class="orderList-items">
                 <div class="orderListItem-img">
-                  <img src="http://na.cannabusimmunity.com/img/orderList-3.png">
+                  <img src="img/orderList-3.png">
                 </div>
                 <div class="orderListItem-text">
                   <p><span class="text-green">защита</span> от повторных заражений</p>
@@ -456,7 +456,7 @@
             </ul>
           </div>
           <div class="col-12 col-sm-5 mob-product">
-            <img class="order-product" src="http://na.cannabusimmunity.com/img/product.png">
+            <img class="order-product" src="img/product.png">
           </div>
           <div class="col-12 col-sm-7 align-self-start mt-4 bl1-formTimer animation-moveLeft" style="opacity: 1;">
             <div class="row justify-content-center background-white">
