исправил пути к картинкам-1

--- a/cannabis.html
+++ b/cannabis.html
@@ -55,7 +55,7 @@
             </ul>
           </div>
           <div class="col-12 col-sm-5 mob-product">
-            <img class="order-product" src="http://na.cannabusimmunity.com/img/product.png">
+            <img class="order-product" src="img/product.png">
           </div>
           <div class="col-12 col-sm-7 align-self-start mt-4 bl1-formTimer animation-moveLeft">
             <div class="row justify-content-center background-white">
@@ -236,7 +236,7 @@
           </div>
           <div class="col-12 col-sm-10 col-md-5">
             <div class="consist-img">
-              <img src="http://na.cannabusimmunity.com/img/consist-item2.png">
+              <img src="img/consist-item2.png">
             </div>
             <div class="consist-itemBlock consist-itemBlock-2">
               <h2 class="consistItem-title">Омега-3 (рыбий жир) </h2>
@@ -370,7 +370,7 @@
                   простуды. Пропиваю его раз в полгода для собственного спокойствия и вот уже три года сильнее насморка
                   ничем не болею.</p>
               </div>
-              <img src="http://na.cannabusimmunity.com/img/stars.png" class="slider-stars">
+              <img src="img/stars.png" class="slider-stars">
             </div><div class="slider-item slider-item_2 slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0">
               <div class="slider-header">
                 <div class="slider-avatar">
@@ -389,7 +389,7 @@
                   лучше, как только начала его принимать. После курса еще ни раз не заболела, хотя многие коллеги ходят
                   с соплями. Средство отличное!</p>
               </div>
-              <img src="http://na.cannabusimmunity.com/img/stars.png" class="slider-stars">
+              <img src="img/stars.png" class="slider-stars">
             </div><div class="slider-item slider-item_3 slick-slide slick-active" data-slick-index="2" aria-hidden="false" tabindex="0">
               <div class="slider-header">
                 <div class="slider-avatar">
@@ -408,7 +408,7 @@
                   лучше время от времени это средство принимать, чем потом себя антибиотиками пичкать. Так что я теперь
                   на здоровой стороне, болеть больше не планирую.</p>
               </div>
-              <img src="http://na.cannabusimmunity.com/img/stars.png" class="slider-stars">
+              <img src="img/stars.png" class="slider-stars">
             </div></div></div>
 
 
@@ -422,7 +422,7 @@
 
     <footer class="footer">
       <section class="container order">
-        <img class="order-product" src="http://na.cannabusimmunity.com/img/product.png">
+        <img class="order-product" src="img/product.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
             <div class="product-label">Cannabis Oil</div>
