добавил карту и сертификаты

--- a/cannabis.html
+++ b/cannabis.html
@@ -5,15 +5,12 @@
 
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cannabis</title>
+  <title>Cannabis Oil</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/css.css">
-
-
-
 
 </head>
 
@@ -92,7 +89,7 @@
                 </div>
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
-                <form action="http://na.cannabusimmunity.com/?c=by" class="order_form p-0 pb-2 mt-2" method="POST">
+                <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
                   <select class="country_select d-block" name="country" id="country"><option value="bg">Болгария</option><option value="be">Бельгия</option><option value="lu">Люксембург</option><option value="nl">Нидерланды</option><option value="hu">Венгрия</option><option value="de">Германия</option><option value="gr">Греция</option><option value="es">Испания</option><option value="it">Италия</option><option value="cy">Кипр</option><option value="lv">Латвия</option><option value="lt">Литва</option><option value="pt">Португалия</option><option value="ro">Румыния</option><option value="sk">Словакия</option><option value="si">Словения</option><option value="hr">Хорватия</option><option value="cz">Чехия</option><option value="ee">Эстония</option></select>
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
@@ -221,7 +218,18 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            Сертификаты
+            <h2 class="consist-title">Сертификаты</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+            <img src="img/certif2019.jpg" alt="">
+          </div>
+          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+            <img src="img/certif2019.jpg" alt="">
+          </div>
+          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+            <img src="img/certif2019.jpg" alt="">
           </div>
         </div>
       </div>
@@ -423,11 +431,18 @@
               <img src="img/stars.png" class="slider-stars">
             </div></div></div>
 
-
-
-
-
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="map-block">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="comment-title">Где ещё купить</h2>
+          </div>
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2e4fc154adb13736956bb98c53147275d1fd3ee634c1bedb785b8d4806cf1ec5&amp;width=100%25&amp;height=650&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
       </div>
     </section>
@@ -503,7 +518,7 @@
                 </div>
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
-                <form action="http://na.cannabusimmunity.com/?c=by" class="order_form p-0 pb-2 mt-2" method="POST">
+                <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
                   <select class="country_select d-block" name="country" id="country"><option value="bg">Болгария</option><option value="be">Бельгия</option><option value="lu">Люксембург</option><option value="nl">Нидерланды</option><option value="hu">Венгрия</option><option value="de">Германия</option><option value="gr">Греция</option><option value="es">Испания</option><option value="it">Италия</option><option value="cy">Кипр</option><option value="lv">Латвия</option><option value="lt">Литва</option><option value="pt">Португалия</option><option value="ro">Румыния</option><option value="sk">Словакия</option><option value="si">Словения</option><option value="hr">Хорватия</option><option value="cz">Чехия</option><option value="ee">Эстония</option></select>
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
