добавил блок задать вопрос

--- a/cannabis.html
+++ b/cannabis.html
@@ -90,7 +90,28 @@
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
                 <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
-                  <select class="country_select d-block" name="country" id="country"><option value="bg">Болгария</option><option value="be">Бельгия</option><option value="lu">Люксембург</option><option value="nl">Нидерланды</option><option value="hu">Венгрия</option><option value="de">Германия</option><option value="gr">Греция</option><option value="es">Испания</option><option value="it">Италия</option><option value="cy">Кипр</option><option value="lv">Латвия</option><option value="lt">Литва</option><option value="pt">Португалия</option><option value="ro">Румыния</option><option value="sk">Словакия</option><option value="si">Словения</option><option value="hr">Хорватия</option><option value="cz">Чехия</option><option value="ee">Эстония</option></select>
+                  <select class="country_select d-block" name="country" id="country">
+                    <option value="ru">Россия</option>
+                    <option value="bg">Болгария</option>
+                    <option value="be">Бельгия</option>
+                    <option value="lu">Люксембург</option>
+                    <option value="nl">Нидерланды</option>
+                    <option value="hu">Венгрия</option>
+                    <option value="de">Германия</option>
+                    <option value="gr">Греция</option>
+                    <option value="es">Испания</option>
+                    <option value="it">Италия</option>
+                    <option value="cy">Кипр</option>
+                    <option value="lv">Латвия</option>
+                    <option value="lt">Литва</option>
+                    <option value="pt">Португалия</option>
+                    <option value="ro">Румыния</option>
+                    <option value="sk">Словакия</option>
+                    <option value="si">Словения</option>
+                    <option value="hr">Хорватия</option>
+                    <option value="cz">Чехия</option>
+                    <option value="ee">Эстония</option>
+                  </select>
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
                   <label>Телефон:
@@ -156,11 +177,26 @@
       </div>
     </section>
 
-    <section class="sertificat">
+    <section class="set-qwestion">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            Задать вопрос
+            <h2 class="consist-title">Задать вопрос</h2>
+          </div>
+          <h3 style="font-size: 22px;color: #000;text-align: center; width: 100%" class="">ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ НЕОБХОДИМУЮ КОНСУЛЬТАЦИЮ В ТЕЧЕНИЕ 15 МИНУТ</h3>
+          <div class="col-5 col-md-5 col-sm-12 consultant-img-block">
+            <div class="consultant-img-block">
+              <img src="img/centro-de-llamadas.png" alt="">
+            </div>
+          </div>
+          <div class="col-5 mx-1 mt-4 bl1-form">
+            <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
+              <label>Ваше имя:
+                <input class="d-block" type="text" required="" name="name"></label>
+              <label>Телефон:
+                <input class="d-block" type="text" required="" name="phone"></label>
+              <button class="py-3 bl1-form__button" type="submit">Купить со скидкой</button>
+            </form>
           </div>
         </div>
       </div>
@@ -453,15 +489,17 @@
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
             <div class="product-label">Cannabis Oil</div>
-            <h1 class="order-title"><span class="order-title_green">Мощная защита</span> от вирусов</h1>
-            <span class="order-subtitle">Укрепи свой иммунитет <br> с Cannabis Oil!</span>
-            <ul class="order-list animation-moveRight" style="opacity: 1;">
+            <h1 class="order-title"><span class="order-title_green">МОЩНАЯ ПОДДЕРЖКА</span> ДЛЯ ВАШЕЙ КОЖИ</h1>
+            <span class="order-subtitle">Сделай кожу идеальной
+с косметикой на основе конопляного экстракта!
+</span>
+            <ul class="order-list animation-moveRight">
               <li class="orderList-items">
                 <div class="orderListItem-img">
                   <img src="img/orderList-1.png">
                 </div>
                 <div class="orderListItem-text">
-                  <p><span class="text-green">Защита от 9872</span> известных науке вирусов</p>
+                  <p><span class="text-green">ЗАЩИТА ОТ БОЛЬШИНСТВА</span> УГРОЗ ДЛЯ КОЖИ</p>
                 </div>
               </li>
               <li class="orderList-items">
@@ -469,7 +507,7 @@
                   <img src="img/orderList-2.png">
                 </div>
                 <div class="orderListItem-text">
-                  <p><span class="text-green">Крепкое здоровье</span> во время эпидемии</p>
+                  <p><span class="text-green">БЫСТРОЕ РЕШЕНИЕ</span> ПРОБЛЕМ КОЖИ</p>
                 </div>
               </li>
               <li class="orderList-items">
@@ -477,7 +515,7 @@
                   <img src="img/orderList-3.png">
                 </div>
                 <div class="orderListItem-text">
-                  <p><span class="text-green">защита</span> от повторных заражений</p>
+                  <p><span class="text-green">ПРОФИЛАКТИКА</span> БОЛЬШИНСТВА УГРОЗ</p>
                 </div>
               </li>
             </ul>
@@ -519,7 +557,28 @@
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
                 <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
-                  <select class="country_select d-block" name="country" id="country"><option value="bg">Болгария</option><option value="be">Бельгия</option><option value="lu">Люксембург</option><option value="nl">Нидерланды</option><option value="hu">Венгрия</option><option value="de">Германия</option><option value="gr">Греция</option><option value="es">Испания</option><option value="it">Италия</option><option value="cy">Кипр</option><option value="lv">Латвия</option><option value="lt">Литва</option><option value="pt">Португалия</option><option value="ro">Румыния</option><option value="sk">Словакия</option><option value="si">Словения</option><option value="hr">Хорватия</option><option value="cz">Чехия</option><option value="ee">Эстония</option></select>
+                  <select class="country_select d-block" name="country" id="country">
+                    <option value="ru">Россия</option>
+                    <option value="bg">Болгария</option>
+                    <option value="be">Бельгия</option>
+                    <option value="lu">Люксембург</option>
+                    <option value="nl">Нидерланды</option>
+                    <option value="hu">Венгрия</option>
+                    <option value="de">Германия</option>
+                    <option value="gr">Греция</option>
+                    <option value="es">Испания</option>
+                    <option value="it">Италия</option>
+                    <option value="cy">Кипр</option>
+                    <option value="lv">Латвия</option>
+                    <option value="lt">Литва</option>
+                    <option value="pt">Португалия</option>
+                    <option value="ro">Румыния</option>
+                    <option value="sk">Словакия</option>
+                    <option value="si">Словения</option>
+                    <option value="hr">Хорватия</option>
+                    <option value="cz">Чехия</option>
+                    <option value="ee">Эстония</option>
+                  </select>
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
                   <label>Телефон:
@@ -557,11 +616,6 @@
       </div>
     </footer>
   </div>
-
-
-
-
-
 
   <div id="lf__holder_left" class="lf__holder-left"></div>
   <div id="lf__holder_right" class="lf__holder-right"></div>
