--- a/cannabis.html
+++ b/cannabis.html
@@ -184,12 +184,12 @@
             <h2 class="consist-title">Задать вопрос</h2>
           </div>
           <h3 style="font-size: 22px;color: #000;text-align: center; width: 100%" class="">ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ НЕОБХОДИМУЮ КОНСУЛЬТАЦИЮ В ТЕЧЕНИЕ 15 МИНУТ</h3>
-          <div class="col-5 col-md-5 col-sm-12 consultant-img-block">
+          <div class="col-12 col-md-5 col-sm-12 col-xm-12 consultant-img-block">
             <div class="consultant-img-block">
               <img src="img/centro-de-llamadas.png" alt="">
             </div>
           </div>
-          <div class="col-5 mx-1 mt-4 bl1-form">
+          <div class="col-12 col-md-5 col-sm-12 col-xm-12 mx-1 mt-4 bl1-form">
             <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
               <label>Ваше имя:
                 <input class="d-block" type="text" required="" name="name"></label>
@@ -258,13 +258,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+          <div class="col-12 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
             <img src="img/certif2019.jpg" alt="">
           </div>
-          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+          <div class="col-12 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
             <img src="img/certif2019.jpg" alt="">
           </div>
-          <div class="col-4 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
+          <div class="col-12 col-md-4 col-sm-6 col-xs-12 sertificat-img-wrap">
             <img src="img/certif2019.jpg" alt="">
           </div>
         </div>
