--- a/cannabis.html
+++ b/cannabis.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cannabis Oil</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon-1.ico">
+  <link rel="shortcut icon" href="img/favicon-1.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/slick-theme.css">
@@ -21,7 +22,7 @@
         <img class="order-product" src="img/product.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
-            <div class="product-label">Cannabis Oil</div>
+            <div class="product-label">Конопляное масло</div>
             <h1 class="order-title"><span class="order-title_green">МОЩНАЯ ПОДДЕРЖКА</span> ДЛЯ ВАШЕЙ КОЖИ</h1>
             <span class="order-subtitle">Сделай кожу идеальной
 с косметикой на основе конопляного экстракта!
@@ -134,7 +135,7 @@
     </header>
 
     <section class="danger">
-      <img class="danger-bg" src="img/danger-bg.png">
+      <!--<img class="danger-bg" src="img/danger-bg.png">-->
       <div class="container">
         <div class="row justify-content-center justify-content-lg-end">
           <div class="col-12 col-lg-7">
@@ -181,7 +182,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="consist-title">Задать вопрос</h2>
+            <h2 class="consist-title">Получить консультацию</h2>
           </div>
           <h3 style="font-size: 22px;color: #000;text-align: center; width: 100%" class="">ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ НЕОБХОДИМУЮ КОНСУЛЬТАЦИЮ В ТЕЧЕНИЕ 15 МИНУТ</h3>
           <div class="col-12 col-md-5 col-sm-12 col-xm-12 consultant-img-block">
@@ -195,7 +196,7 @@
                 <input class="d-block" type="text" required="" name="name"></label>
               <label>Телефон:
                 <input class="d-block" type="text" required="" name="phone"></label>
-              <button class="py-3 bl1-form__button" type="submit">Купить со скидкой</button>
+              <button class="py-3 bl1-form__button" type="submit">Получить бонус за консультацию</button>
             </form>
           </div>
         </div>
@@ -275,7 +276,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="consist-title">СОСТАВ CANNABIS OIL</h2>
+            <h2 class="consist-title">Полезные составляющие конопляного экстракта</h2>
           </div>
         </div>
         <div class="row justify-content-center justify-content-lg-start js-consist-anim animation-moveRight" style="opacity: 1;">
@@ -368,7 +369,7 @@
             <p class="slider-text">Бальзам предназначен для ухода за сухой и поврежденной кожей. Входящие в состав масло, экстракты и витамины питают кожу, улучшая её внешний вид, способствуют увлажнению, эффективно ускоряют процессы регенерации, снимают воспаление, нормализуют цвет кожи, Особенно эффективно использование на сухих и поврежденных участках кожи рук, ног, тела. Заживляет трещины, и размягчает мозоли.</p>
           </div>
           <div class="col-7 col-md-4 px-0 how-item how-item-2">
-            <img class="how-img" src="img/how-item-2.png">
+            <img class="how-img" src="img/kgem-dlya-ruk.jpg">
             <p class="how-text">КРЕМ</p>
             <p class="slider-text">Идеально питает, хорошо увлажняет кожу, обладает высокими заживляющими свойствами и высокой впитываемостью.</p>
 
@@ -478,9 +479,9 @@
           <div class="col-12">
             <h2 class="comment-title">Где ещё купить</h2>
           </div>
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2e4fc154adb13736956bb98c53147275d1fd3ee634c1bedb785b8d4806cf1ec5&amp;width=100%25&amp;height=650&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
       </div>
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2e4fc154adb13736956bb98c53147275d1fd3ee634c1bedb785b8d4806cf1ec5&amp;width=100%25&amp;height=650&amp;lang=ru_RU&amp;scroll=false"></script>
     </section>
 
     <footer class="footer">
@@ -600,16 +601,17 @@
       </section>
       <div class="foot">
         <div class="left-side">
-          <a href="http://na.cannabusimmunity.com/privacyRU.html" target="_blank" style="color: inherit; cursor: pointer;">Политика
+          <a href="https://1753cosmetics.ru/content/2-legal-notice" target="_blank" style="color: #000; cursor: pointer;">Политика
             конфиденциальности</a>
           <br>
-          <a href="http://na.cannabusimmunity.com/serf.pdf" target="_blank" class="serf">Сертификат соответствия<br>*Содержание THC не превышает
+          <a href="" target="_blank" class="serf">Сертификат соответствия<br>*Содержание THC не превышает
             0,2%</a>
         </div>
 
         <div class="right-side">
           <p class="privat">
-            ООО "ТОПСКЕЙЛ" <br>ОГРН: 5166723551498, ИНН: 655983818, <br>г. Москва, ул. Енисейская, 9А<br>
+            <a href="https://1753cosmetics.ru" style="color: #000;">1753COSMETICS</a> <br>Телефон: +7(495) 510-62-72 , +7-925-874-04-69, <br>г. Москва, Нагорный проезд, дом 7<br>
+            <a href="mailto:inbox@1753cosmetics.ru" style="color: #000;">inbox@1753cosmetics.ru</a>
 
           </p>
         </div>
