--- a/cannabis.html
+++ b/cannabis.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cannabis Oil</title>
-  <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon-1.ico">
+  <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon-1.ico">
   <link rel="shortcut icon" href="img/favicon-1.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/slick.css">
@@ -19,7 +19,7 @@
   <div class="wrap">
     <header>
       <section class="container order">
-        <img class="order-product" src="img/product.png">
+        <img class="order-product" src="img/stek423452452.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
             <div class="product-label">Конопляное масло</div>
@@ -394,7 +394,7 @@
               Наш ассортимент будет постоянно расширяться !
             </p>
             <div class="spec-footer">
-              <span class="spec-name">Йозеф Малл,</span> <br>
+              <span class="spec-name">Виктор Арсеньев,</span> <br>
               <span class="spec-prof">д.м.н., профессор, иммунолог</span>
             </div>
           </div>
@@ -473,11 +473,31 @@
       </div>
     </section>
 
+    <section class="where-by">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="comment-title">Где купить онлайн?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6 where-by-block">
+            <a href="https://www.wildberries.ru/brands/1753-cosmetics">
+              <img src="img/wildberries_natorgoval.png" alt=""></a>
+          </div>
+          <div class="col-12 col-md-6 where-by-block">
+            <a href="https://1753cosmetics.ru/12-katalog">
+              <img src="img/cosmetics-logo-1586866545.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="map-block">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="comment-title">Где ещё купить</h2>
+            <h2 class="comment-title">Где ещё купить?</h2>
           </div>
         </div>
       </div>
@@ -486,10 +506,10 @@
 
     <footer class="footer">
       <section class="container order">
-        <img class="order-product" src="img/product.png">
+        <img class="order-product" src="img/stek423452452.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
-            <div class="product-label">Cannabis Oil</div>
+            <div class="product-label">Конопляное масло</div>
             <h1 class="order-title"><span class="order-title_green">МОЩНАЯ ПОДДЕРЖКА</span> ДЛЯ ВАШЕЙ КОЖИ</h1>
             <span class="order-subtitle">Сделай кожу идеальной
 с косметикой на основе конопляного экстракта!
@@ -603,9 +623,6 @@
         <div class="left-side">
           <a href="https://1753cosmetics.ru/content/2-legal-notice" target="_blank" style="color: #000; cursor: pointer;">Политика
             конфиденциальности</a>
-          <br>
-          <a href="" target="_blank" class="serf">Сертификат соответствия<br>*Содержание THC не превышает
-            0,2%</a>
         </div>
 
         <div class="right-side">
