--- a/cannabis.html
+++ b/cannabis.html
@@ -60,17 +60,17 @@
           <div class="col-12 col-sm-7 align-self-start mt-4 bl1-formTimer animation-moveLeft">
             <div class="row justify-content-center background-white">
               <div class="col-12">
-                <h4 class="bl1-form__heading">Закажите сет <br> со скидкой <br> <span class="text-pink">прямо сейчас</span>
+                <h4 class="bl1-form__heading">Закажите сет <br> (Бальзам + крем + масло)<br>  со скидкой <br> <span class="text-pink">прямо сейчас</span>
                 </h4>
               </div>
               <div class="col-12 form-prices">
                 <div class="prices-oldPrice">
-                  <span class="oldPrice price_old"><span class="price_main_value">10</span>
-            <span class="price_main_currency">евро</span></span>
+                  <span class="oldPrice price_old"><span class="price_main_value">2050</span>
+            <span class="price_main_currency">руб</span></span>
                 </div>
                 <div class="prices-NewPrice">
-                  <span class="newPrice price_main"><span class="price_main_value">5</span>
-            <span class="price_main_currency">евро</span></span>
+                  <span class="newPrice price_main"><span class="price_main_value">1700</span>
+            <span class="price_main_currency">руб</span></span>
                 </div>
               </div>
               <div class="col-12">
@@ -91,7 +91,7 @@
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
                 <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
-                  <select class="country_select d-block" name="country" id="country">
+                  <!--<select class="country_select d-block" name="country" id="country">
                     <option value="ru">Россия</option>
                     <option value="bg">Болгария</option>
                     <option value="be">Бельгия</option>
@@ -112,7 +112,7 @@
                     <option value="hr">Хорватия</option>
                     <option value="cz">Чехия</option>
                     <option value="ee">Эстония</option>
-                  </select>
+                  </select>-->
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
                   <label>Телефон:
@@ -415,17 +415,22 @@
                   <div class="avatar-orange"></div>
                 </div>
                 <div class="slider-personInfo">
-                  <span class="person-name">Марк,</span> <br>
+                  <span class="person-name">Алла,</span> <br>
                   <span class="person-age">48 лет</span>
                 </div>
               </div>
               <div class="slider-content">
-                <p class="slider-text">У меня всегда был крепкий иммунитет, болел раз в год от силы. Однажды сильно
-                  простыл и по своей глупости и неопытности лечащего врача пропил антибиотики. Выздоровел, но здоровье
-                  дало трещину. Всякая зараза липла, как мухи на скотч. Как ни пытался, иммунитет поднять не мог, пока
-                  дочь не привезла Cannabis Oil. Отличное средство, поставило меня на ноги за считанные дни в период
-                  простуды. Пропиваю его раз в полгода для собственного спокойствия и вот уже три года сильнее насморка
-                  ничем не болею.</p>
+                <p class="slider-text">Масло семян конопли в бальзаме? Однозначно, да!
+                  Подарили мне это бальзам несколько месяцев назад, и я очень довольна!
+
+                  Бальзам бесцветный, средней консистенции, не жидкий и не густой. На морозе правда затвердевает, а в тепле становится мягче.
+                  У него специфический запах каких-то трав, очень приятный.
+
+                  В состав входит масло и экстракт семян конопли и витамин Е. Это бальзам, который действительно ухаживает за губами и многим другим, увлажняет и питает их в течении дня!
+                  Очень комфортные ощущения, особенно зимой, когда губы обветриваются. Стоит намазать их на ночь, как утром эффект сразу же виден! Восстанавливает даже сильные повреждения.
+                  В общем, хороший реально ухаживающий бальзам для губ, рекомендую!
+                  Очень нравится красивая упаковка, стильная баночка, приятная консистенция и цвет. А самое главное конопля… хоть оно и полностью разрешенное, но чувство эксклюзивности весьма приятно)
+                </p>
               </div>
               <img src="img/stars.png" class="slider-stars">
             </div><div class="slider-item slider-item_2 slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0">
@@ -434,17 +439,12 @@
                   <div class="avatar-orange"></div>
                 </div>
                 <div class="slider-personInfo">
-                  <span class="person-name">Ирэн,</span> <br>
+                  <span class="person-name">Alex,</span> <br>
                   <span class="person-age">34 года</span>
                 </div>
               </div>
               <div class="slider-content">
-                <p class="slider-text">Вышла на новую работу, быстро стала двигаться по карьерной лестнице. Работу люблю
-                  до изнеможения, часто остаюсь в офисе до глубокой ночи – мотивация есть. Здоровье в таком режиме ушло
-                  на второй план. Из-за частых недосыпов начались стрессы, иммунитет совсем упал. Частые простуды мне
-                  совсем не на руку. Cannabis Oil быстро помог залатать пробелы в здоровье. Сразу почувствовала себя
-                  лучше, как только начала его принимать. После курса еще ни раз не заболела, хотя многие коллеги ходят
-                  с соплями. Средство отличное!</p>
+                <p class="slider-text">Не в моих правилах писать отзывы, но решил, что про этот чудо-крем, напишу. Попал мне данный продукт в руки пару месяцев назад, отношение изначально было очень скептическое. До недавнего времени я использовал крем для рук иной марки, и он мне очень нравился. Когда-то зимой я купил его в Москве и постоянно продолжал его покупать. Из любопытства я приобрел данный крем, т.к читал про положительные свойства органической косметики на основе конопли. Что понравилось: запах, реально пахнет натуральными маслами и совершенно не похож, на крема с резкими отдушками, второе- отлично впитывается, и нет ощущения жирности на руках, третье-я часто мою руки в течении дня, и они не сохнут так сильно от мыла, как это было раньше. У данной компании есть сайт, хотя работает он как-то криво, но заказать можно. Сейчас еще купил себе их бальзам, через пару месяцев поделюсь своими впечатлениями от его использования. Узнал о них от своей девушки, она использовала их крема для лица и масло. Кстати, продукт российский, что не может не радовать.</p>
               </div>
               <img src="img/stars.png" class="slider-stars">
             </div><div class="slider-item slider-item_3 slick-slide slick-active" data-slick-index="2" aria-hidden="false" tabindex="0">
@@ -453,17 +453,19 @@
                   <div class="avatar-orange"></div>
                 </div>
                 <div class="slider-personInfo">
-                  <span class="person-name">Стефан,</span> <br>
+                  <span class="person-name">Илона,</span> <br>
                   <span class="person-age">53 года</span>
                 </div>
               </div>
               <div class="slider-content">
-                <p class="slider-text">Я среднестатистический здоровый человек со своими болячками и ОРВИ в период
-                  простуд. Болею от случая к случаю – то на ногах переношу, то ложусь пластом и шевелиться не могу до
-                  полного выздоровления. Жена настояла с ней пропить Cannabis Oil. В самом начале весны его принимали.
-                  Все вокруг болеют, в масках ходят, а нам все ни по чем, иммунитет стал – дай боже каждому. Решил, уж
-                  лучше время от времени это средство принимать, чем потом себя антибиотиками пичкать. Так что я теперь
-                  на здоровой стороне, болеть больше не планирую.</p>
+                <p class="slider-text">По текстуре бальзам плотный, густой, масляный, неоднородный, чувствуются небольшие крупинки. Но от тепла пальцев тает, старовится мягким и поддатливым. Имеет трявяной аромат. Кому-то может не понравится, но я тащусь от таких пряных запахов свежескошенной травы и орехов.
+                  Бальзам волшебным образом действует на кожу. Восстанавливает сухие и потрескавшиеся участки, заживляет ранки. Я использую его как средство по уходу за кутикулой.
+                  Наношу так же на нос, так как сейчас период аллергии, и, сами понимаете, аллергический насморк и все дела. Нос зашоркала до мозолей 🙈
+                  А бальзам чудесным образом за ночь убирает покраснение и заживляет потертости под носом)))
+                  Так же наношу после душа на пятки, локти, сухие губы, царапинки и ранки. Конопляное масло отлично залечивает и снимает воспаление.
+                  Так же мажу сыну различные царапки, расчесы, небольшие ссадинки. Ни разу не было проявлений аллергии и еще каких-то негативных последствий. Забыла написать, бальзам снимает зуд при проявлениях атопического диатеза у детей.
+                  От бальзама у меня самые приятные впечатления. Обожаю такие универсальные средства! Ставлю жирную пятерку и низкий поклон производителям.
+                </p>
               </div>
               <img src="img/stars.png" class="slider-stars">
             </div></div></div>
@@ -547,17 +549,17 @@
           <div class="col-12 col-sm-7 align-self-start mt-4 bl1-formTimer animation-moveLeft" style="opacity: 1;">
             <div class="row justify-content-center background-white">
               <div class="col-12">
-                <h4 class="bl1-form__heading">Закажите <br> со скидкой <br> <span class="text-pink">прямо сейчас</span>
+                <h4 class="bl1-form__heading">Закажите сет <br> (Бальзам + крем + масло)<br>  со скидкой <br> <span class="text-pink">прямо сейчас</span>
                 </h4>
               </div>
               <div class="col-12 form-prices">
                 <div class="prices-oldPrice">
-                  <span class="oldPrice price_old"><span class="price_main_value">10</span>
-            <span class="price_main_currency">евро</span></span>
+                  <span class="oldPrice price_old"><span class="price_main_value">2050</span>
+            <span class="price_main_currency">руб</span></span>
                 </div>
                 <div class="prices-NewPrice">
-                  <span class="newPrice price_main"><span class="price_main_value">5</span>
-            <span class="price_main_currency">евро</span></span>
+                  <span class="newPrice price_main"><span class="price_main_value">1700</span>
+            <span class="price_main_currency">руб</span></span>
                 </div>
               </div>
               <div class="col-12">
@@ -578,7 +580,7 @@
               </div>
               <div class="col-12 mx-1 mt-4 bl1-form">
                 <form action="send.php" class="order_form p-0 pb-2 mt-2" method="POST">
-                  <select class="country_select d-block" name="country" id="country">
+                  <!--<select class="country_select d-block" name="country" id="country">
                     <option value="ru">Россия</option>
                     <option value="bg">Болгария</option>
                     <option value="be">Бельгия</option>
@@ -599,7 +601,7 @@
                     <option value="hr">Хорватия</option>
                     <option value="cz">Чехия</option>
                     <option value="ee">Эстония</option>
-                  </select>
+                  </select>-->
                   <label>Ваше имя:
                   <input class="d-block" type="text" required="" name="name"></label>
                   <label>Телефон:
