--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cannabis Oil</title>
+  <title>Конопляная косметика</title>
   <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon-1.ico">
   <link rel="shortcut icon" href="img/favicon-1.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
@@ -22,7 +22,7 @@
         <img class="order-product" src="img/stek423452452.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
-            <div class="product-label">Конопляное масло</div>
+            <div class="product-label">Конопляная косметика</div>
             <h1 class="order-title"><span class="order-title_green">МОЩНАЯ ПОДДЕРЖКА</span> ДЛЯ ВАШЕЙ КОЖИ</h1>
             <span class="order-subtitle">Сделай кожу идеальной
 с косметикой на основе конопляного экстракта!
@@ -138,7 +138,10 @@
       <!--<img class="danger-bg" src="img/danger-bg.png">-->
       <div class="container">
         <div class="row justify-content-center justify-content-lg-end">
-          <div class="col-12 col-lg-7">
+          <div class="col-6 col-lg-5 danger-icon-block">
+            <img src="img/danger-2.png" alt="">
+          </div>
+          <div class="col-6 col-lg-7">
             <h2 class="danger-title">Ваша кожа <span class="danger-title_red">в опасности!</span></h2>
             <p class="danger-subTitle">Наша кожа постоянно подвергается неблагоприятным воздействиям окружающей среды. Особенно в осенне-зимний период и весной, когда даже самая беспроблемная кожа подвергается суровым испытаниям ветром, снегом и нехваткой витаминов в питании.</p>
           </div>
@@ -206,7 +209,7 @@
     <section class="immun">
       <div class="container">
         <div class="immun-productBlock">
-          <img class="immun-product" src="img/product.png">
+          <img class="immun-product" src="img/stek423452452.png">
         </div>
         <div class="row justify-content-end">
           <div class="col-12 col-lg-7 immun-block">
@@ -511,7 +514,7 @@
         <img class="order-product" src="img/stek423452452.png">
         <div class="row justify-content-center justify-content-lg-between">
           <div class="col-12 col-lg order-left">
-            <div class="product-label">Конопляное масло</div>
+            <div class="product-label">Конопляная косметика</div>
             <h1 class="order-title"><span class="order-title_green">МОЩНАЯ ПОДДЕРЖКА</span> ДЛЯ ВАШЕЙ КОЖИ</h1>
             <span class="order-subtitle">Сделай кожу идеальной
 с косметикой на основе конопляного экстракта!
