--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
       <!--<img class="danger-bg" src="img/danger-bg.png">-->
       <div class="container">
         <div class="row justify-content-center justify-content-lg-end">
-          <div class="col-6 col-lg-5 danger-icon-block">
+          <div class="col-12 col-lg-5 col-md-12 danger-icon-block">
             <img src="img/danger-2.png" alt="">
           </div>
-          <div class="col-6 col-lg-7">
+          <div class="col-12 col-lg-7 col-md-12">
             <h2 class="danger-title">Ваша кожа <span class="danger-title_red">в опасности!</span></h2>
             <p class="danger-subTitle">Наша кожа постоянно подвергается неблагоприятным воздействиям окружающей среды. Особенно в осенне-зимний период и весной, когда даже самая беспроблемная кожа подвергается суровым испытаниям ветром, снегом и нехваткой витаминов в питании.</p>
           </div>
@@ -415,7 +415,9 @@
             <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 15000px; transform: translate(-16px, 0px);"><div class="slider-item slider-item_1 slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0">
               <div class="slider-header">
                 <div class="slider-avatar">
-                  <div class="avatar-orange"></div>
+                  <div class="avatar-orange">
+                    <img src="img/otziv-ava-1.jpg" alt="">
+                  </div>
                 </div>
                 <div class="slider-personInfo">
                   <span class="person-name">Алла,</span> <br>
@@ -439,7 +441,9 @@
             </div><div class="slider-item slider-item_2 slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0">
               <div class="slider-header">
                 <div class="slider-avatar">
-                  <div class="avatar-orange"></div>
+                  <div class="avatar-orange">
+                    <img src="img/otziv-ava-2.jpg" alt="">
+                  </div>
                 </div>
                 <div class="slider-personInfo">
                   <span class="person-name">Alex,</span> <br>
@@ -453,7 +457,9 @@
             </div><div class="slider-item slider-item_3 slick-slide slick-active" data-slick-index="2" aria-hidden="false" tabindex="0">
               <div class="slider-header">
                 <div class="slider-avatar">
-                  <div class="avatar-orange"></div>
+                  <div class="avatar-orange">
+                    <img src="img/otziv-ava-3.jpg" alt="">
+                  </div>
                 </div>
                 <div class="slider-personInfo">
                   <span class="person-name">Илона,</span> <br>
